Bug 1263334 - Check VBR header is valid before using it for duration calculations. r=esawin, a=lizzard

MozReview-Commit-ID: KPrn5WeXUuF

--HG--
extra : source : bd4c7118ebb957763b7d957ca73b7fba6cf61265
extra : intermediate-source : 19f7428b8d987e557f1fa54b5b2463a7b4d9d165